Fix #106: The number of ancestors should be recalculated in case of a pedigree collapse

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,3 +9,7 @@
         padding-right: 0.5rem;
     }
 }
+
+.tooltip-inner {
+    text-align: left;
+}
